[fix] Remove text-overflow hidden on <td>

--- a/assets/scss/templates/_content.scss
+++ b/assets/scss/templates/_content.scss
@@ -112,9 +112,12 @@
       font-weight: 600;
     }
     td {
+      vertical-align: top;
+      /*
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
+      */
     }
   }
 }
